--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.19",
-    "vuepress": "2.0.0-rc.19",
-    "vuepress-theme-plume": "1.0.0-rc.131",
     "http-server": "^14.1.1",
-    "vue": "^3.5.13",
     "sass-embedded": "^1.85.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vue": "^3.5.13",
+    "vuepress": "2.0.0-rc.19",
+    "vuepress-theme-plume": "1.0.0-rc.131"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.8",
+    "echarts": "^5.6.0",
+    "flowchart.ts": "^3.0.1",
+    "mermaid": "^11.4.1"
   }
 }
